<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".feature.main.explore.ExploreFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/searchButton"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_margin="16dp"
                android:background="@drawable/button_border"
                android:text="@string/search"
                android:textColor="@color/primaryTextColor"
                app:icon="@drawable/ic_round_search_24"
                app:iconTint="@color/white"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recommended"
                android:layout_marginHorizontal="16dp"
                android:textAppearance="?attr/textAppearanceHeadline5"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recommend_RV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:scrollbars="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="horizontal"
                >
                <!--
                <LinearLayout
                    android:id="@+id/rec_lin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="160dp"
                        android:layout_height="160dp"
                        android:layout_marginEnd="12dp"
                        app:cardBackgroundColor="@color/blue_grey_700"
                        app:cardCornerRadius="4dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:orientation="vertical"
                            android:background="@color/primaryOverlay"
                            android:padding="8dp">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="2dp"
                                android:text="@string/podcast_title"
                                android:textAppearance="?attr/textAppearanceHeadline6" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="2dp"
                                android:text="@string/podcast_channel"
                                android:textAppearance="?attr/textAppearanceBody2" />
                        </LinearLayout>
                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="160dp"
                        android:layout_height="160dp"
                        android:layout_marginEnd="12dp"
                        app:cardBackgroundColor="@color/blue_grey_700"
                        app:cardCornerRadius="4dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:orientation="vertical"
                            android:background="@color/primaryOverlay"
                            android:padding="8dp">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="2dp"
                                android:text="@string/podcast_title"
                                android:textAppearance="?attr/textAppearanceHeadline6" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="2dp"
                                android:text="@string/podcast_channel"
                                android:textAppearance="?attr/textAppearanceBody2" />
                        </LinearLayout>
                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="160dp"
                        android:layout_height="160dp"
                        android:layout_marginEnd="12dp"
                        app:cardBackgroundColor="@color/blue_grey_700"
                        app:cardCornerRadius="4dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:orientation="vertical"
                            android:background="@color/primaryOverlay"
                            android:padding="8dp">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="2dp"
                                android:text="@string/podcast_title"
                                android:textAppearance="?attr/textAppearanceHeadline6" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="2dp"
                                android:text="@string/podcast_channel"
                                android:textAppearance="?attr/textAppearanceBody2" />
                        </LinearLayout>
                    </com.google.android.material.card.MaterialCardView>

                </LinearLayout>
            -->
            </androidx.recyclerview.widget.RecyclerView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_releases"
                android:layout_marginHorizontal="16dp"
                android:textAppearance="?attr/textAppearanceHeadline5"/>


            <LinearLayout
                android:id="@+id/lin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="16dp">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="118dp"
                    android:layout_height="120dp"
                    android:layout_marginEnd="12dp"
                    app:cardBackgroundColor="@color/design_default_color_secondary_variant"
                    app:cardCornerRadius="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:orientation="vertical"
                        android:background="@color/primaryOverlay"
                        android:padding="8dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="2dp"
                            android:text="@string/podcast_title"
                            android:textAppearance="?attr/textAppearanceBody2" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="118dp"
                    android:layout_height="120dp"
                    android:layout_marginEnd="12dp"
                    app:cardBackgroundColor="@color/design_default_color_secondary_variant"
                    app:cardCornerRadius="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:orientation="vertical"
                        android:background="@color/primaryOverlay"
                        android:padding="8dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="2dp"
                            android:text="@string/podcast_title"
                            android:textAppearance="?attr/textAppearanceBody2" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="118dp"
                    android:layout_height="120dp"
                    android:layout_marginEnd="12dp"
                    app:cardBackgroundColor="@color/design_default_color_secondary_variant"
                    app:cardCornerRadius="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:orientation="vertical"
                        android:background="@color/primaryOverlay"
                        android:padding="8dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="2dp"
                            android:text="@string/podcast_title"
                            android:textAppearance="?attr/textAppearanceBody2" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rec_channels"
                android:layout_marginHorizontal="16dp"
                android:textAppearance="?attr/textAppearanceHeadline5"/>


            <HorizontalScrollView
                android:id="@+id/channel_scroll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <LinearLayout
                    android:id="@+id/channel_lin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="12dp"
                        android:orientation="vertical">

                        <com.google.android.material.card.MaterialCardView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            app:cardBackgroundColor="@color/blue_grey_700"
                            app:cardCornerRadius="40dp"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="2dp"
                            android:text="@string/podcast_channel"
                            android:textAlignment="center"
                            android:textAppearance="?attr/textAppearanceBody2" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="12dp"
                        android:orientation="vertical">

                        <com.google.android.material.card.MaterialCardView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            app:cardBackgroundColor="@color/blue_grey_700"
                            app:cardCornerRadius="40dp"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="2dp"
                            android:text="@string/podcast_channel"
                            android:textAlignment="center"
                            android:textAppearance="?attr/textAppearanceBody2" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="12dp"
                        android:orientation="vertical">

                        <com.google.android.material.card.MaterialCardView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            app:cardBackgroundColor="@color/blue_grey_700"
                            app:cardCornerRadius="40dp"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="2dp"
                            android:text="@string/podcast_channel"
                            android:textAlignment="center"
                            android:textAppearance="?attr/textAppearanceBody2" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="12dp"
                        android:orientation="vertical">

                        <com.google.android.material.card.MaterialCardView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            app:cardBackgroundColor="@color/blue_grey_700"
                            app:cardCornerRadius="40dp"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="2dp"
                            android:text="@string/podcast_channel"
                            android:textAlignment="center"
                            android:textAppearance="?attr/textAppearanceBody2" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="12dp"
                        android:orientation="vertical">

                        <com.google.android.material.card.MaterialCardView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            app:cardBackgroundColor="@color/blue_grey_700"
                            app:cardCornerRadius="40dp"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="2dp"
                            android:text="@string/podcast_channel"
                            android:textAlignment="center"
                            android:textAppearance="?attr/textAppearanceBody2" />

                    </LinearLayout>
                </LinearLayout>
            </HorizontalScrollView>
        </LinearLayout>
    </ScrollView>
</FrameLayout>